--- a/week-06/day-2-Tables_Forms/loginForm.html
+++ b/week-06/day-2-Tables_Forms/loginForm.html
@@ -9,16 +9,14 @@
     <link href="https://fonts.googleapis.com/css?family=PT+Serif" rel="stylesheet">
 </head>
 <body>
-    <form>
-        <h1 class="index-title">Account Login</h1>
-        <form action="thanks.html" id="my-first-form" method="">
+    <form method=post>
+        <h1>Account Login</h1>
         <label for="name">Username</label>
-        <input name="name" type="text" placeholder="Username"> 
-        <label for="Password">Password</label>
-        <input name="Password" type="text" placeholder="Password"> 
-        <a href="file:///C:/Users/Ancsi/Desktop/greenfox/BPAndrea/week-06/day-2-Tables_Forms/loginForm.html"></a>
-        <button>Login</button>
-    </form>
-    
+        <input type="text" id="name"> 
+        <label for="password">Password</label>
+        <input name="password" id="password">  
+        <p class=password>Forget passord?</p> 
+        <input type="submit" value=Login>
+    </form> 
 </body>
 </html>
