--- a/week-06/day-2-Tables_Forms/fancyTable.html
+++ b/week-06/day-2-Tables_Forms/fancyTable.html
@@ -8,7 +8,7 @@
     <link rel='stylesheet' href='tableStyles.css'/>
 </head>
 <body>
-    <table>
+     <table class="table1">
         <thead class="tablehead">
             <tr>
                 <th>Month</th>
@@ -39,5 +39,7 @@
         </tbody>
 
     </table>
+
+    
 </body>
 </html>
