LoginForm added input validation

--- a/week-06/day-2-Tables_Forms/loginForm.html
+++ b/week-06/day-2-Tables_Forms/loginForm.html
@@ -12,9 +12,9 @@
     <form method=post>
         <h1>Account Login</h1>
         <label for="name">Username</label>
-        <input type="text" id="name"> 
+        <input type="text" id="name" required> 
         <label for="password">Password</label>
-        <input name="password" id="password">  
+        <input type="password" id="password" required>  
         <p class=password>Forget passord?</p> 
         <input type="submit" value=Login>
     </form> 
