added My Shop html base

--- a/week-06/day-2-Tables_Forms/SignUpForm/signUpForm.html
+++ b/week-06/day-2-Tables_Forms/SignUpForm/signUpForm.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div>
-    <form class="form" action="action=https://newsletter-ws.herokuapp.com/register" method="post">   
+    <form class="form" action="action=https://newsletter-ws.herokuapp.com/register" method="post" id="signUp">   
     <h1>Sign up</h1>
         <input type="name" placeholder="Username" required>
         <input type="email" placeholder="E-mail" required>
