--- a/huli/Eventlistener/bubbling.html
+++ b/huli/Eventlistener/bubbling.html
@@ -37,14 +37,15 @@
     </div>
 
     <script>
-        const buttons = document.getElementsByTagName("button");
+ /*        const buttons = document.getElementsByTagName("button");
         const image = document.getElementsByClassName("img-inspector")[0];
         const zooming = ((event) => {
             if(event.getAttribute("data-direction") == "in") {
-                image.setAttribute(background-size, image.getAttribute(background-size)*1.2);
+               // image.setAttribute(background-size, image.getAttribute(background-size)*1.2);
+                image.setAttribute(background-size, 150%*1,2);
 
             }
-        });
+        }); */
     </script>
 
     <!-- You can work in the html or in a separate js file. Like:
